@@ -3,7 +3,7 @@ CFLAGS = -Wall
 
 bin_PROGRAMS = fuser killall pstree
 
-fuser_SOURCES = fuser.c comm.h signals.c signals.h signames.h
+fuser_SOURCES = fuser.c comm.h signals.c signals.h signames.h loop.h
 
 killall_SOURCES = killall.c comm.h signals.c signals.h signames.h
 
